[tool.poetry]
name = "shooty-game"
version = "0.1.0"
description = "Game/Simulation which is a 2D-analog of Counter Strike as a target for Deep Reinforcement Learning."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.2"
stable-baselines3 = "^1.5.0"
tensorboard = "^2.8.0"
click = "^8.0.4"
protobuf = "3.20.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pyre-check = "^0.9.10"
black = "^22.1.0"
reorder-python-imports = "^2.7.1"
pylint = "^2.12.2"
pytest-cov = "^3.0.0"
pydocstyle = {extras = ["toml"], version = "^6.1.1"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.MASTER]
ignore-paths = "tests/*"

[tool.pylint.messages_control]
disable = [
    # pydocstyle takes care of this...
    "missing-module-docstring",
    "missing-function-docstring",
    "missing-class-docstring",
    
    # don't hinder me creating small classes!
    "too-few-public-methods",
    
    # reorder-python-imports should know what it's doing
    "wrong-import-order",

    # can't do much about duplicate imports in two files, I'm afraid...
    "duplicate-code",

    # I need TODO and FIXME comments...
    "fixme",
]

extension-pkg-allow-list=[
    "pygame"
]

[tool.pydocstyle]
ignore = [
    "D203", # 1 blank line required before class docstring (found 0)
    "D213", # Multi-line docstring summary should start at the second line
    "D202", # No blank lines allowed after function docstring (found 1)
    "D413", # Missing blank line after last section ('Returns')
    "D407", # Missing dashed underline after section ('Returns')
    "D406", # Section name should end with a newline ('Returns', not 'Returns:')
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
]
match-dir = '[^\.][^test].*'

[tool.pytest.ini_options]
markers = [
    "integration: (potentially slow) integration tests that test the whole application",
]